Fix Pro batch authority name padding bug
Adds some space between authority names and action buttons, as well as
making sure that the padding-left extends the full height of the element
(because it’s now a block), preventing the arrow from overlapping the
second line of text.

Part of mysociety/alaveteli-professional#502.

--- a/app/assets/stylesheets/responsive/alaveteli_pro/_batch_request_authority_search_style.scss
+++ b/app/assets/stylesheets/responsive/alaveteli_pro/_batch_request_authority_search_style.scss
@@ -139,8 +139,10 @@
     border-bottom: 1px solid #dcdbd7;
 
     .batch-builder__list__item__name {
+        display: block;
         font-weight: bold;
         padding-left: 20px; // make space for the :before icon
+        padding-right: 1em; // space between list item name and action button
         position: relative;
 
         &:before {
